Fixed all font related issues on the home page and by extension on the flights page. fixed most of the layout problems in the home page. Lower part of the footer still needs additional content and the search bar still needs work and with the cdn link from fontawesome i can replicate the search bar as it is on the doc and also the filter container in the flights page.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,116 @@
+.poppins-thin {
+    font-family: "Poppins", sans-serif;
+    font-weight: 100;
+    font-style: normal;
+  }
+  
+  .poppins-extralight {
+    font-family: "Poppins", sans-serif;
+    font-weight: 200;
+    font-style: normal;
+  }
+  
+  .poppins-light {
+    font-family: "Poppins", sans-serif;
+    font-weight: 300;
+    font-style: normal;
+  }
+  
+  .poppins-regular {
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+  
+  .poppins-medium {
+    font-family: "Poppins", sans-serif;
+    font-weight: 500;
+    font-style: normal;
+  }
+  
+  .poppins-semibold {
+    font-family: "Poppins", sans-serif;
+    font-weight: 600;
+    font-style: normal;
+  }
+  
+  .poppins-bold {
+    font-family: "Poppins", sans-serif;
+    font-weight: 700;
+    font-style: normal;
+  }
+  
+  .poppins-extrabold {
+    font-family: "Poppins", sans-serif;
+    font-weight: 800;
+    font-style: normal;
+  }
+  
+  .poppins-black {
+    font-family: "Poppins", sans-serif;
+    font-weight: 900;
+    font-style: normal;
+  }
+  
+  .poppins-thin-italic {
+    font-family: "Poppins", sans-serif;
+    font-weight: 100;
+    font-style: italic;
+  }
+  
+  .poppins-extralight-italic {
+    font-family: "Poppins", sans-serif;
+    font-weight: 200;
+    font-style: italic;
+  }
+  
+  .poppins-light-italic {
+    font-family: "Poppins", sans-serif;
+    font-weight: 300;
+    font-style: italic;
+  }
+  
+  .poppins-regular-italic {
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    font-style: italic;
+  }
+  
+  .poppins-medium-italic {
+    font-family: "Poppins", sans-serif;
+    font-weight: 500;
+    font-style: italic;
+  }
+  
+  .poppins-semibold-italic {
+    font-family: "Poppins", sans-serif;
+    font-weight: 600;
+    font-style: italic;
+  }
+  
+  .poppins-bold-italic {
+    font-family: "Poppins", sans-serif;
+    font-weight: 700;
+    font-style: italic;
+  }
+  
+  .poppins-extrabold-italic {
+    font-family: "Poppins", sans-serif;
+    font-weight: 800;
+    font-style: italic;
+  }
+  
+  .poppins-black-italic {
+    font-family: "Poppins", sans-serif;
+    font-weight: 900;
+    font-style: italic;
+  }
+  
+
+
 @font-face {
     font-family: 'PorterSans';
-    src: url(../assets\fonts\porter_sans_block\porter-sans-inline-block-webfont.woff);
+    src: url(../assets/fonts/porter_sans_block/porter-sans-inline-block-webfont.woff);
   }
 
 
@@ -17,6 +127,10 @@ header{
     background-image: url(../assets/img/homePageHeader.png);
     background-size: cover;
     padding: 1.5em;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-content:space-between ;
 }
 
 .logo{
@@ -64,27 +178,47 @@ color: black;
 .searchBar{
     margin-left: auto;
     margin-right: auto;
-
+    height: 500px;
+    margin-top: 30em;
 }
 
 
 .heroText{
-    display: flex;
-     flex-direction: column;
-    justify-content: flex-end;
-   height: 80vh;
-   align-self: flex-end;
+    width: 100%;
    padding: 0;
    margin-left: 2em;
    font-family: 'PorterSans';
 
 }
 
+.heroTextspace{
+    display: flex;
+    flex-direction: column;
+   justify-content: flex-start;
+   text-align: left;
+   padding: ;
+}
+
+.heroTextspace h3{
+    font-family: "Poppins", sans-serif;
+    font-weight: 900;
+    font-style: normal;
+    color: rgb(59, 4, 59);
+    padding-bottom: 1em;
+}
+
 #rpv{
-   font-family: 'PorterSans';
+    font-family: 'PorterSans';
     font-weight: 600;
     color: rgb(204, 46, 46);
+    text-align: left;
+    margin: 0;
+    display: block;
+    padding-bottom: 0.5em;
+    ;
 }
+
+
 
 /*feature trip*/
 
@@ -295,7 +429,95 @@ button:hover {
     }
 }
 
-.planets button{
+#homeBookbtn{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#homeBookbtn :hover{
+    
+}
 
 
+/*footer*/
+
+footer{
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    align-items: center;
+    background-color: #fff;
+    color: #000000;
+    padding: 2em;
+    flex-wrap: wrap; /* Ensures responsiveness on smaller screens */
+}
+
+footer .logo{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 2em;
+    padding-bottom: 1em;
+    margin-bottom: 2em;
+}
+
+footer p{
+    padding-top: 1em;
+}
+
+.company {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 0.5em; /* Adds space between links */
+}
+
+.company :hover{
+    color: rgb(59, 4, 59);
+    font-weight: 800;
+}
+
+footer a {
+    color: #000;
+    text-decoration: none;
+    font-size: 1rem;
+}
+
+/* Mobile Responsiveness */
+@media (max-width: 768px) {
+    footer {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+
+    footer .logo {
+        align-items: center;
+    }
+}
+
+/*flights page*/
+
+.homeHeader2{
+    background-image: url(../assets/img/headerbackBack.png);
+    background-size: cover;
+    padding: 1.5em;
+    height: 30em;
+}
+
+h1{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: url(../assets/fonts/porter_sans_block/porter-sans-inline-block-webfont.ttf);
+}
+
+.filterBox{
+    background-color: purple;
+    width: 100%;
+    height: 100px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
